# LearnedSort

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  benchmarks_driver.cc  compile.sh  download_real_datasets.sh  quick-test.sh  real_bench.sh  run.sh  run_benchmarks.sh  run_tests.sh  synth_bench.sh  test.sh  util.h
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-cmake.yml  pull_request.yml  push.yml
data/Books/: download.sh  parser.py
data/Chic/: download.sh  parser.py  uniques_cnt_Start  uniques_cnt_Tot
data/FB/: download.sh  parser.py
data/NYC/: download.sh  parser.py  uniques_cnt_Dist  uniques_cnt_Pickup  uniques_cnt_Tot
data/OSM/: download.sh  parser.py  uniques_cnt
data/Sof/: download.sh  parser.py  uniques_cnt_Hum  uniques_cnt_Press  uniques_cnt_Temp
data/Stks/: download.sh  parser.py  uniques_cnt_Date  uniques_cnt_Low  uniques_cnt_Open  uniques_cnt_Vol
data/Wiki/: download.sh  parser.py  uniques_cnt
include/: learned_sort.h  rmi.h  utils.h
lib/: learned_sort.hh
plots/: ls github.numbers
src/: CMakeLists.txt  benchmarks_driver.cc  generators.h  generators.h.old  learned_sort.cc  learned_sort.h  learned_sort.hh  main.cc  main_real.cc  main_synth.cc  utils.h
test/: is4o_tests.cc  radix_sort_tests.cc  std_sort_tests.cc  timsort_tests.cc  util.hh
tst/: CMakeLists.txt  learned_sort.cc
unit_tests/: all_inplace_ls_hmg_flagged_tests.cc  is4o_tests.cc  learned_sort_tests.cc  learned_sort_tests.cc.new  radix_sort_tests.cc  std_sort_tests.cc  tests_driver.cc  timsort_tests.cc  util.h  util.hh
